--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       WORDPRESS_DB_NAME: "${DB_NAME}"
       WORDPRESS_DB_USER: root
       WORDPRESS_DB_PASSWORD: "${DB_ROOT_PASSWORD}"
+    restart: always
     depends_on:
       - db
     links:
@@ -28,6 +29,7 @@ services:
     depends_on:
       - db
       - wp
+    restart: always
 
   #pma:
   #  image: phpmyadmin/phpmyadmin
@@ -55,6 +57,7 @@ services:
     environment:
       MYSQL_DATABASE: "${DB_NAME}"
       MYSQL_ROOT_PASSWORD: "${DB_ROOT_PASSWORD}"
+    restart: always
 
 volumes:
   db_data:
